--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^5.1.0",
     "framer-motion": "^12.4.7",
     "next": "15.2.0",
     "react": "^19.0.0",
