--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^3.4.1",
     "cookies-next": "^5.1.0",
     "framer-motion": "^12.4.7",
+    "mapbox-gl": "^3.10.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
